--- a/fundValueCrawl.ipynb
+++ b/fundValueCrawl.ipynb
@@ -76,6 +76,7 @@
     "        lsjz.drop(columns=['ACTUALSYI','FHFCZ','FHFCBZ','FHSP','NAVTYPE','DTYPE','SDATE'],inplace = True)\n",
     "        lsjz.rename(columns = {'FSRQ':'净值日期', 'DWJZ':'单位净值', 'LJJZ':'累计净值',\n",
     "                      'JZZZL':'日增长率', 'SGZT':'申购状态', 'SHZT':'赎回状态'}, inplace = True)\n",
+	"		 lszj['日增长率'] = lsjz['日增长率']+'%'",
     "        info = {'lsjz': lsjz,\n",
     "                'total_page': total_page}\n",
     "        return info\n",
